argo-cd/argo-cd-http-route.yaml

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argo-http-route
  namespace: argocd
spec:
  parentRefs:
    - name: gateway
      namespace: istio-ingress
      sectionName: argocd 
  hostnames: ["argocd.home"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 443
